--- a/README
+++ b/README
@@ -7,7 +7,7 @@ https://data.tpdc.ac.cn/zh-hans/data/8028b944-daaa-4511-8769-965612652c49
 www.tianqihoubao.com/
 
  Running：
- 1.download dataset:
+ 1.download dataset or install glf:
  https://data.tpdc.ac.cn/zh-hans/data/8028b944-daaa-4511-8769-965612652c49
 
  2.run
